add basic html structure

--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
 
             <div class="hidden finish">
                 <h2 id="done">All Done!</h2>
-                
+                <h3>Correct Answers: <span id="correct"></span></h3>
+                <h3>Incorrect Answers: <span id="incorrect"></span></h3>
+                <h3>Unanswered: <span id="unanswered"></span></h3>
             </div>
         </div>
     </div>
