--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Bungee&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <title>Trivia Game</title>
 </head>
 
 <body>
     <div class="container text-center">
-        <h1>Super Mega Trivia!</h1>
+        <h1 id="header">Super Mega Computer Trivia!</h1>
         <div class="game">
-            <a href="#" class="btn btn-primary" id="start">Start!</a>
-            <div class="hidden trivia">
+            <a href="#" class="btn btn-primary hidden" id="start">Start!</a>
+            <div class="trivia hidden">
                 <h2>Time Remaining: <span id="time"></span></h2>
                 <h2 id="question">Whatever?</h2>
                 <p class="answer" id="answer1" value="1">answer1</p>
@@ -25,11 +26,16 @@
                 <p class="answer" id="answer4" value="4">answer4</p>
             </div>
 
-            <div class="hidden finish">
+            <div class="finish hidden">
                 <h2 id="done">All Done!</h2>
-                <h3>Correct Answers: <span id="correct"></span></h3>
-                <h3>Incorrect Answers: <span id="incorrect"></span></h3>
+                <h3>Correct Answers: <span id="numberCorrect"></span></h3>
+                <h3>Incorrect Answers: <span id="numberIncorrect"></span></h3>
                 <h3>Unanswered: <span id="unanswered"></span></h3>
+            </div>
+
+            <div class="result">
+                <h2 id="right-wrong">Correct!</h2>
+                <h3>The correct answer was: <span id="rightAnswer">beans!</span></h3>
             </div>
         </div>
     </div>
