--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container text-center">
         <h1 id="header">Super Mega Computer Trivia!</h1>
         <div class="game">
-            <a href="#" class="btn btn-primary hidden" id="start">Start!</a>
+            <a href="#" class="btn btn-primary" id="start">Start!</a>
             <div class="trivia hidden">
                 <h2>Time Remaining: <span id="time"></span></h2>
                 <h2 id="question">Whatever?</h2>
@@ -33,7 +33,7 @@
                 <h3>Unanswered: <span id="unanswered"></span></h3>
             </div>
 
-            <div class="result">
+            <div class="result hidden">
                 <h2 id="right-wrong">Correct!</h2>
                 <h3>The correct answer was: <span id="rightAnswer">beans!</span></h3>
             </div>
