add timer and time out

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="game">
             <a href="#" class="btn btn-primary" id="start">Start!</a>
             <div class="trivia hidden">
-                <h2>Time Remaining: <span id="time"></span></h2>
+                <h2>Time Remaining: <span id="time">30</span></h2>
                 <h2 id="question">Whatever?</h2>
                 <p class="answer" id="answer1" value="1">answer1</p>
                 <p class="answer" id="answer2" value="2">answer2</p>
