add final results screen

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <div class="trivia hidden">
                 <h2>Time Remaining: <span id="time">30</span></h2>
                 <h2 id="question">Whatever?</h2>
-                <p class="answer" id="answer1" value="1">answer1</p>
-                <p class="answer" id="answer2" value="2">answer2</p>
-                <p class="answer" id="answer3" value="3">answer3</p>
-                <p class="answer" id="answer4" value="4">answer4</p>
+                <p class="answer" id="answer1" value="answer1">answer1</p>
+                <p class="answer" id="answer2" value="answer2">answer2</p>
+                <p class="answer" id="answer3" value="answer3">answer3</p>
+                <p class="answer" id="answer4" value="answer4">answer4</p>
             </div>
 
             <div class="finish hidden">
